# CodeSage

./: .gitignore  README.md  main.py  pyproject.toml  search_results.md
data/lance_db/code_chunks_table.lance/_transactions/: 0-55f3e988-296d-4aba-b912-365205241140.txn
data/lance_db/code_chunks_table.lance/_versions/: 1.manifest
data/lance_db/code_chunks_table.lance/data/: 80ed75e5-35fe-4193-9ba8-39df8a76f69b.lance
my_code_repo_for_lancedb_demo/: code_analysis_report.md  code_analysis_results.json  code_processor.py  code_splitter.py  data_processing.py  embedding.py  example_utils.py  test_code.py
src/: __init__.py  main.py
src/core/: code_splitter.py
src/db/: db.py
src/model/: embedding.py  rerank.py
